# mdlm_refine

./: .gitignore  README.md  pyproject.toml
configs/: finetune_llada_config.yaml
diffusion-vs-ar/: eval_reconstruct.py  main.py  pyproject.toml
diffusion-vs-ar/scripts/: eval-reconstruct-sweep.sh  plot-sweep.py  sweep-eval.sh
discrete-diffusion-guidance/: diffusion.py  main.py  pyproject.toml  requirements.txt  setup_env.sh
discrete-diffusion-guidance/configs/: config.yaml
discrete-diffusion-guidance/guidance_eval/: qm9_eval.py
discrete-diffusion-guidance/mdlm_scripts/: eval_qm9_guidance_mdlm_proseco.sh  eval_qm9_guidance_mdlm_refine.sh  eval_qm9_guidance_mdlm_vanilla.sh  eval_qm9_mdlm_proseco.sh  eval_qm9_mdlm_refine.sh  eval_qm9_mdlm_vanilla.sh  train_qm9_guidance_mdlm_proseco.sh  train_qm9_guidance_mdlm_refine.sh  train_qm9_guidance_mdlm_vanilla.sh  train_qm9_mdlm_proseco.sh  train_qm9_mdlm_refine.sh  train_qm9_mdlm_vanilla.sh
discrete-diffusion-guidance/no_guidance_scripts/: eval_qm9_mdlm_refine.sh  train_qm9_mdlm_proseco.sh  train_qm9_mdlm_refine.sh  train_qm9_mdlm_vanilla.sh
discrete-diffusion-guidance/scripts/: train_qm9_no-guidance.sh
mdlm/: diffusion.py  eval.md  eval_reconstruct.py  extract_samples.py  main.py  model_eval.py  plot_sweep.py  pyproject.toml  requirments_eval.txt  sample_wikitext.jsonl  samples_confidence_t128.jsonl  setup.md  trying_new_sampling_method.md  vis_samples.jsonl
mdlm/configs/: config.yaml
mdlm/slurm/: eval_atomic.sh  eval_confidence.sh  eval_large.sh  eval_lm_judge.sh  eval_mauve.sh  (+8 more)
train/: finetune_llada.py
(+33 files in other folders)
